Fix logo sizing on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -137,6 +137,13 @@ body {
     margin: 30px auto 44px auto;
 }
 
+@media (max-width: 768px) {
+    #landing-logo {
+        width: 200px;
+        margin: 30px auto 30px auto;
+    }
+}
+
 #landing-logo > .text {
     fill: var(--text-color);
 }
